# cloth_assist_framework

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
files/bgplvm/: config.rviz  model.p
files/kinect/: calibration.yaml
files/posture/: posture  posture.yaml
files/reward/: forceThresh.p
include/: extractor.h  processor.h  recorder.h  tracker.h
launch/: compute_posture.launch  model_animator.launch  model_player.launch
nodes/: kinect_extractor.cpp  kinect_recorder.cpp  pose_extractor.cpp
scripts/: compute_posture.py  compute_reward.py  dmp_fit.py  img_reward.py  learn.py  model_animator.py  model_creator.py  model_player.py  play.py  posture.py  power_learning.py  record.py  reward_model.py  teach.py  term_reward.py  trajectory.py
src/: extractor.cpp  processor.cpp  recorder.cpp  tracker.cpp
src/cloth_assist/: plot_funcs.py
src/rl/: control.py  policy.py  power.py  reward.py
src/utility/: model_funcs.py  plot_funcs.py  recorder.py
